added second screen

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,39 @@
         </div>
       </div>
     </header>
+    <section class="building">
+      <div class="container">
+        <div class="building__block">
+          <p>
+            Сегодня в Украине продолжается процесс преобразований в экономике, постепенно складываются условия для благоприятного инвестиционного климата.
+          </p>
+          <p>
+            Строительство – одна из наиболее динамично развивающихся отраслей экономики страны.
+          </p>
+          <p>
+            Инвестирование капитала в строительство, на сегодняшний день стало выгодным вложением денежных средств.
+          </p>
+        </div>
+      </div>
+    </section>
+    <div class="gradient-wrapper">
+      <section class="section-title">
+        <div class="container">
+          <h2>
+            Международная строительная компания «Украина-Канада» представляет уникальный коттеджный микрорайон  <b>«Золотые Ключи».</b>
+          </h2>
+        </div>
+      </section>
+      <section class="section-home">
+        <div class="container">
+          <div class="section-home__advantage">
+            <div class="section-home__title">
+              <span>200</span>га
+            </div>
+            <p>Площади</p>
+          </div>
+      </section>
+    </div>
     <section class="section-form">
       <div class="container">
         <img src="./images/logo 2.2.png" alt="logo">
