--- a/src/index.html
+++ b/src/index.html
@@ -1,61 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Золотые ключи</title>
-    <link rel="stylesheet" href="css/styles.min.css" />
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i,900,900i|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap" rel="stylesheet">
-  </head>
 
-  <body>
-    <header class="header">
-      <div class="container">
-        <div class="header__nav">
-          <img src="./images/logo 2.2.png" alt="logo" class="header__logo">
-          <div class="header__phone">
-            <h3 class="phone-number">+38 (097) 99-99-111</h3>
-            <button class="btn">Заказать звонок</button>
-          </div>
-        </div>
-        <div class="header__text">
-          <h3 class="header__text-title">уникальный коттеджный микрорайон «Золотые Ключи»</h3>
-          <div class="header__address">
-            <img src="./images/Exclude_white.svg" srcset="./images/Exclude_white.svg" alt="svg" class="address-img">
-            <h4 class="address-text">смт. Слобожанское, г. Днепр</h4>
-          </div>
-        </div>
-      </div>
-    </header>
-    <section class="section-form">
-      <div class="container">
-        <img src="./images/logo 2.2.png" alt="logo">
-        <h2>Узнайте подробности</h2>
-        <h3>Оставьте свой номер телефона и наш менеджер свяжется с вами в течение дня</h3>
-        <form>
-          <input type="text" name="name" placeholder="Ваше имя">
-          <input type="text" name="phone" placeholder="Ваш телефон">
-          <button class="btn" type="submit">Отправить</button>
-        </form>
-      </div>
-    </section>
-    <section class="google-nav">
-    </section>
-    <footer class="footer">
-      <div class="container">
-        <div class="footer__nav">
-            <img src="./images/logo 2.2.png" alt="logo" class="header__logo">
-            <div class="footer__address">
-                <img src="./images/Exclude_black.svg" srcset="./images/Exclude_black.svg" alt="svg" class="address-img">
-                <h4 class="address-text">смт. Слобожанское, г. Днепр</h4>
-              </div>
-            <div class="header__phone">
-              <h3 class="phone-number">+38 (097) 99-99-111</h3>
-              <button class="btn">Заказать звонок</button>
-            </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Золотые ключи</title>
+  <link rel="stylesheet" href="css/styles.min.css" />
+  <link
+    href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i,900,900i|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap"
+    rel="stylesheet">
+</head>
+
+<body>
+  <header class="header">
+    <div class="container">
+      <div class="header__nav">
+        <img src="./images/logo 2.2.png" alt="logo" class="header__logo">
+        <div class="header__phone">
+          <h3 class="phone-number">+38 (097) 99-99-111</h3>
+          <button class="btn">Заказать звонок</button>
         </div>
       </div>
-    </footer>
-  </body>
+      <div class="header__text">
+        <h3 class="header__text-title">уникальный коттеджный микрорайон «Золотые Ключи»</h3>
+        <div class="header__address">
+          <img src="./images/Exclude_white.svg" srcset="./images/Exclude_white.svg" alt="svg" class="address-img">
+          <h4 class="address-text">смт. Слобожанское, г. Днепр</h4>
+        </div>
+      </div>
+    </div>
+  </header>
+  <section class="communications">
+    <div class="container">
+      <h3 class="comm-tit">Новые сети коммуникации</h3>
+      <ul class="comm-list">
+        <li class="comm-list-item">
+          <img src="./images/phone.svg" alt="">
+          <h4 class="item-text">Телефонная связь</h4>
+        </li>
+        <li class="comm-list-item">
+          <img src="./images/water.svg" alt="">
+          <h4 class="item-text">Водопровод, канализация</h4>
+        </li>
+        <li class="comm-list-item">
+          <img src="./images/electric.svg" alt="">
+          <h4 class="item-text">Энерго- снабжение</h4>
+        </li>
+        <li class="comm-list-item">
+          <img src="./images/gas.svg" alt="">
+          <h4 class="item-text">газ</h4>
+        </li>
+        <li class="comm-list-item">
+          <img src="./images/internet.svg" alt="">
+          <h4 class="item-text">интернет</h4>
+        </li>
+      </ul>
+    </div>
+  </section>
+  <section class="section-form">
+    <div class="container">
+      <img src="./images/logo 2.2.png" alt="logo" class="form-logo">
+      <h2 class="form-title">Узнайте подробности</h2>
+      <h3 class="form-subtitle">Оставьте свой номер телефона и наш менеджер свяжется с вами в течение дня</h3>
+      <form>
+        <input type="text" name="name" placeholder="Ваше имя" class="form-input">
+        <input type="text" name="phone" placeholder="Ваш телефон" class="form-input">
+        <button class="btn form-btn" type="submit">Отправить</button>
+      </form>
+    </div>
+  </section>
+  <section class="google-nav">
+    <iframe src="./images/image.png" frameborder="0" class="iframe"></iframe>
+  </section>
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__nav">
+        <img src="./images/logo 2.2.png" alt="logo" class="header__logo">
+        <div class="footer__address">
+          <img src="./images/Exclude_black.svg" srcset="./images/Exclude_black.svg" alt="svg" class="address-img">
+          <h4 class="address-text">смт. Слобожанское, г. Днепр</h4>
+        </div>
+        <div class="header__phone">
+          <h3 class="phone-number">+38 (097) 99-99-111</h3>
+          <button class="btn">Заказать звонок</button>
+        </div>
+      </div>
+    </div>
+  </footer>
+</body>
+
 </html>
