--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
         </div>
       </div>
     </section>
-    <div class="gradient-wrapper">
+    <section class="gradient-wrapper">
       <section class="section-title">
         <div class="container">
           <h2>
@@ -60,7 +60,22 @@
             <p>Площади</p>
           </div>
       </section>
-    </div>
+    </section>
+    <section>
+      <h2>
+
+      </h2>
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </section>
     <section class="section-form">
       <div class="container">
         <img src="./images/logo 2.2.png" alt="logo">
