--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
             Сегодня в Украине продолжается процесс преобразований в экономике, постепенно складываются условия для благоприятного инвестиционного климата.
           </p>
           <p>
-            Строительство – одна из наиболее динамично развивающихся отраслей экономики страны.
+            <b>Строительство</b> – одна из наиболее динамично развивающихся отраслей экономики страны.
           </p>
           <p>
             Инвестирование капитала в строительство, на сегодняшний день стало выгодным вложением денежных средств.
@@ -56,9 +56,33 @@
           <div class="section-home__advantage">
             <div class="section-home__title">
               <span>200</span>га
+              <p>Площади</p>
             </div>
-            <p>Площади</p>
           </div>
+          <div class="section-home__advantage">
+            <div class="section-home__title">
+              <span> >1000</span>
+              <p>Жилых  домов</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="building golden">
+        <div class="container">
+          <div class="building__block">
+            <p>
+              Здесь на площади 200 га, в рамках комплексного градостроительного решения, будут возведены около 1000 индивидуальных жилых домов, а также объекты социальной, инженерной и коммерческой инфраструктуры.
+            </p>
+            <p>
+              В <b>«Золотых Ключах»</b> строятся жилые дома на участках от 6 до 15 сотых гектара. Это позволяет людям с разным уровнем достатка с полным основанием решить: «Это для меня доступно!».
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="video">
+        <div class="container">
+          <h3>Видеопрезентация</h3>
+        </div>
       </section>
     </div>
     <section class="section-form">
