--- a/src/index.html
+++ b/src/index.html
@@ -33,32 +33,34 @@
   </header>
   <section class="communications">
     <div class="container">
-      <h3 class="comm-tit">Новые сети коммуникации</h3>
+      <h3 class="comm-title">Новые сети коммуникации</h3>
       <ul class="comm-list">
         <li class="comm-list-item">
-          <img src="./images/phone.svg" alt="">
+          <img src="./images/phone.svg" alt="" class="item-img">
           <h4 class="item-text">Телефонная связь</h4>
         </li>
         <li class="comm-list-item">
-          <img src="./images/water.svg" alt="">
+          <img src="./images/water.svg" alt="" class="item-img">
           <h4 class="item-text">Водопровод, канализация</h4>
         </li>
         <li class="comm-list-item">
-          <img src="./images/electric.svg" alt="">
+          <img src="./images/electric.svg" alt="" class="item-img">
           <h4 class="item-text">Энерго- снабжение</h4>
         </li>
         <li class="comm-list-item">
-          <img src="./images/gas.svg" alt="">
-          <h4 class="item-text">газ</h4>
+          <img src="./images/gas.svg" alt="" class="item-img">
+          <h4 class="item-text">Газ</h4>
         </li>
         <li class="comm-list-item">
-          <img src="./images/internet.svg" alt="">
-          <h4 class="item-text">интернет</h4>
+          <img src="./images/internet.svg" alt="" class="item-img">
+          <h4 class="item-text">Интернет</h4>
         </li>
       </ul>
+      <p class="communication-text">На территории «Золотых Ключей» и прилегающих участках размещены торговые, выставочные и складские комплексы: ТЦ «МЭТРО», ТЦ «ЭПИЦЕНТР», логистический центр сети магазинов «АТБ», мебельный салон, площадка по продаже с/х техники, автосалоны, автомойка, АЗС.</p>
     </div>
   </section>
   <section class="section-form">
+    <div class="rgba"> </div>
     <div class="container">
       <img src="./images/logo 2.2.png" alt="logo" class="form-logo">
       <h2 class="form-title">Узнайте подробности</h2>
@@ -71,7 +73,7 @@
     </div>
   </section>
   <section class="google-nav">
-    <iframe src="./images/image.png" frameborder="0" class="iframe"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10565.820375675354!2d35.0755475413036!3d48.54367356812491!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d95919e955f523%3A0xbedb451a48a7b5ac!2z0JfQvtC70L7RgtGL0LUg0LrQu9GO0YfQuCwg0KHQu9C-0LHQvtC20LDQvdGB0LrQvtC1LCDQlNC90LXQv9GA0L7Qv9C10YLRgNC-0LLRgdC60LDRjyDQvtCx0LvQsNGB0YLRjA!5e0!3m2!1sru!2sua!4v1564759989827!5m2!1sru!2sua" frameborder="0" class="iframe" width="500px" height="533px" allowfullscreen></iframe>
   </section>
   <footer class="footer">
     <div class="container">
