--- a/src/index.html
+++ b/src/index.html
@@ -12,113 +12,116 @@
     rel="stylesheet">
 </head>
 
-  <body>
-    <header class="header">
-      <div class="container">
-        <div class="header__nav">
-          <img src="./images/logo 2.2.png" alt="logo" class="header__logo">
-          <div class="header__phone">
-            <h3 class="phone-number">+38 (097) 99-99-111</h3>
-            <button class="btn">Заказать звонок</button>
-          </div>
-        </div>
-        <div class="header__text">
-          <h3 class="header__text-title">уникальный коттеджный микрорайон «Золотые Ключи»</h3>
-          <div class="header__address">
-            <img src="./images/Exclude_white.svg" srcset="./images/Exclude_white.svg" alt="svg" class="address-img">
-            <h4 class="address-text">смт. Слобожанское, г. Днепр</h4>
-          </div>
-        </div>
+<body>
+<header class="header">
+  <div class="container">
+    <div class="header__nav">
+      <img src="./images/logo 2.2.png" alt="logo" class="header__logo">
+      <div class="header__phone">
+        <h3 class="phone-number">+38 (097) 99-99-111</h3>
+        <button class="btn">Заказать звонок</button>
       </div>
-    </header>
-    <section class="building">
-      <div class="container">
-        <div class="building__block">
-          <p>
-            Сегодня в Украине продолжается процесс преобразований в экономике, постепенно складываются условия для благоприятного инвестиционного климата.
-          </p>
-          <p>
-            <b>Строительство</b> – одна из наиболее динамично развивающихся отраслей экономики страны.
-          </p>
-          <p>
-            Инвестирование капитала в строительство, на сегодняшний день стало выгодным вложением денежных средств.
-          </p>
-        </div>
-      </div>
-    </section>
-    <div class="gradient-wrapper">
-      <section class="section-title">
-        <div class="container">
-          <h2>
-            Международная строительная компания «Украина-Канада» представляет уникальный коттеджный микрорайон  <b>«Золотые Ключи».</b>
-          </h2>
-        </div>
-      </section>
-      <section class="section-home">
-        <div class="container">
-          <div class="section-home__advantage">
-            <div class="section-home__title">
-              <span>200</span>га
-              <p>Площади</p>
-            </div>
-          </div>
-          <div class="section-home__advantage">
-            <div class="section-home__title">
-              <span> >1000</span>
-              <p>Жилых  домов</p>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="building golden">
-        <div class="container">
-          <div class="building__block">
-            <p>
-              Здесь на площади 200 га, в рамках комплексного градостроительного решения, будут возведены около 1000 индивидуальных жилых домов, а также объекты социальной, инженерной и коммерческой инфраструктуры.
-            </p>
-            <p>
-              В <b>«Золотых Ключах»</b> строятся жилые дома на участках от 6 до 15 сотых гектара. Это позволяет людям с разным уровнем достатка с полным основанием решить: «Это для меня доступно!».
-            </p>
-          </div>
-        </div>
-      </section>
-      <section class="video">
-        <div class="container">
-          <h3>Видеопрезентация</h3>
-        </div>
-      </section>
     </div>
-  </section>
-  <section class="section-form">
+    <div class="header__text">
+      <h3 class="header__text-title">уникальный коттеджный микрорайон «Золотые Ключи»</h3>
+      <div class="header__address">
+        <img src="./images/Exclude_white.svg" srcset="./images/Exclude_white.svg" alt="svg" class="address-img">
+        <h4 class="address-text">смт. Слобожанское, г. Днепр</h4>
+      </div>
+    </div>
+  </div>
+</header>
+<section class="building">
+  <div class="container">
+    <div class="building__block">
+      <p>
+        Сегодня в Украине продолжается процесс преобразований в экономике, постепенно складываются условия для благоприятного инвестиционного климата.
+      </p>
+      <p>
+        <b>Строительство</b> – одна из наиболее динамично развивающихся отраслей экономики страны.
+      </p>
+      <p>
+        Инвестирование капитала в строительство, на сегодняшний день стало выгодным вложением денежных средств.
+      </p>
+    </div>
+  </div>
+</section>
+<div class="gradient-wrapper">
+  <section class="section-title">
     <div class="container">
-      <img src="./images/logo 2.2.png" alt="logo" class="form-logo">
-      <h2 class="form-title">Узнайте подробности</h2>
-      <h3 class="form-subtitle">Оставьте свой номер телефона и наш менеджер свяжется с вами в течение дня</h3>
-      <form>
-        <input type="text" name="name" placeholder="Ваше имя" class="form-input">
-        <input type="text" name="phone" placeholder="Ваш телефон" class="form-input">
-        <button class="btn form-btn" type="submit">Отправить</button>
-      </form>
+      <h2>
+        Международная строительная компания «Украина-Канада» представляет уникальный коттеджный микрорайон  <b>«Золотые Ключи».</b>
+      </h2>
     </div>
   </section>
-  <section class="google-nav">
-    <iframe src="./images/image.png" frameborder="0" class="iframe"></iframe>
-  </section>
-  <footer class="footer">
+  <section class="section-home">
     <div class="container">
-      <div class="footer__nav">
-        <img src="./images/logo 2.2.png" alt="logo" class="header__logo">
-        <div class="footer__address">
-          <img src="./images/Exclude_black.svg" srcset="./images/Exclude_black.svg" alt="svg" class="address-img">
-          <h4 class="address-text">смт. Слобожанское, г. Днепр</h4>
+      <div class="section-home__advantage">
+        <div class="section-home__title">
+          <span>200</span>га
+          <p>Площади</p>
         </div>
-        <div class="header__phone">
-          <h3 class="phone-number">+38 (097) 99-99-111</h3>
-          <button class="btn">Заказать звонок</button>
+      </div>
+      <div class="section-home__advantage">
+        <div class="section-home__title">
+          <span> >1000</span>
+          <p>Жилых  домов</p>
         </div>
       </div>
     </div>
-  </footer>
+  </section>
+  <section class="building golden">
+    <div class="container">
+      <div class="building__block">
+        <p>
+          Здесь на площади 200 га, в рамках комплексного градостроительного решения, будут возведены около 1000 индивидуальных жилых домов, а также объекты социальной, инженерной и коммерческой инфраструктуры.
+        </p>
+        <p>
+          В <b>«Золотых Ключах»</b> строятся жилые дома на участках от 6 до 15 сотых гектара. Это позволяет людям с разным уровнем достатка с полным основанием решить: «Это для меня доступно!».
+        </p>
+      </div>
+    </div>
+  </section>
+  <section class="video">
+    <div class="container">
+      <span class="video__title">Видеопрезентация</span>
+      <video width="960" height="540" controls="controls" poster="src/images/vidro-preview.png">
+        <source src="http://gold-key.sevn.pro/golden-keys.mp4" type="video/mp4">
+      </video>
+    </div>
+  </section>
+</div>
+</section>
+<section class="section-form">
+  <div class="container">
+    <img src="./images/logo 2.2.png" alt="logo" class="form-logo">
+    <h2 class="form-title">Узнайте подробности</h2>
+    <h3 class="form-subtitle">Оставьте свой номер телефона и наш менеджер свяжется с вами в течение дня</h3>
+    <form>
+      <input type="text" name="name" placeholder="Ваше имя" class="form-input">
+      <input type="text" name="phone" placeholder="Ваш телефон" class="form-input">
+      <button class="btn form-btn" type="submit">Отправить</button>
+    </form>
+  </div>
+</section>
+<section class="google-nav">
+  <iframe src="./images/image.png" frameborder="0" class="iframe"></iframe>
+</section>
+<footer class="footer">
+  <div class="container">
+    <div class="footer__nav">
+      <img src="./images/logo 2.2.png" alt="logo" class="header__logo">
+      <div class="footer__address">
+        <img src="./images/Exclude_black.svg" srcset="./images/Exclude_black.svg" alt="svg" class="address-img">
+        <h4 class="address-text">смт. Слобожанское, г. Днепр</h4>
+      </div>
+      <div class="header__phone">
+        <h3 class="phone-number">+38 (097) 99-99-111</h3>
+        <button class="btn">Заказать звонок</button>
+      </div>
+    </div>
+  </div>
+</footer>
 </body>
 
 </html>
