--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
     <section class="video">
       <div class="container">
         <span class="video__title">Видеопрезентация</span>
-        <video width="960" height="540" controls="controls" poster="src/images/vidro-preview.png">
+        <video width="960" height="540" controls="controls" poster="./images/vidro-preview.png">
           <source src="http://gold-key.sevn.pro/golden-keys.mp4" type="video/mp4">
         </video>
       </div>
