--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Золотые ключи</title>
   <link rel="stylesheet" href="css/styles.min.css" />
-  <link
-    href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i,900,900i|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"
           integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 </head>
@@ -108,7 +106,7 @@
         <div class="button-wrapper">
           <button class="btn">Узнать подробнее</button>
         </div>
-       <img src="./images/architectural-design-architecture-attic-2079434.png" height="592" width="896"/>
+       <img src="./images/DJI_0040(1).png" height="592" width="700"/>
       </div>
     </section>
   </div>
@@ -192,7 +190,7 @@
           <img src="./images/Exclude_black.svg" srcset="./images/Exclude_black.svg" alt="svg" class="address-img">
           <h4 class="address-text">смт. Слобожанское, г. Днепр</h4>
         </div>
-        <div class="header__phone">
+        <div class="footer__phone">
           <h3 class="phone-number">+38 (097) 99-99-111</h3>
           <button class="btn">Заказать звонок</button>
         </div>
